# SMFLEngine

./: CMakeLists.txt  Untitled Diagram.xml
cmake_modules/: FindSFML.cmake
include/: settings.h
ressources/level/: logan.tsx
src/: main.cpp
src/Clock/: C_Timer.cpp  C_Timer.hh
src/Context/: C_Game.cpp  C_Game.hh  C_World.cpp  C_World.hh
src/Debug/: C_DebugScreen.cpp  C_DebugScreen.hh  C_DrawableString.cpp  C_DrawableString.hh  C_FrameRate.cpp  C_FrameRate.hh  C_JoyAxisValue.cpp  C_JoyAxisValue.hh  C_PlayerVector.cpp  C_PlayerVector.hh
src/Entities/: C_StateEntity.cpp  C_StateEntity.hh  C_TestEntitie.cpp  C_TestEntitie.hh  C_TestEntitieState.cpp  C_TestEntitieState.hh  C_TestMoveState.cpp  C_TestMoveState.hh  C_TestStateMachine.cpp  C_TestStateMachine.hh
src/Entities/Player/: C_Player.cpp  C_Player.hh
src/Entities/Player/PlayerStates/: C_PlayerJumpState.cpp  C_PlayerJumpState.hh  C_PlayerMoveState.cpp  C_PlayerMoveState.hh  C_PlayerNeutralState.cpp  C_PlayerNeutralState.hh  C_PlayerStateBase.cpp  C_PlayerStateBase.hh
src/Event/: C_EventHandler.cpp  C_EventHandler.hh
src/Graphic/: C_Entity.cpp  C_Entity.hh  C_SceneNode.cpp  C_SceneNode.hh  C_SpriteNode.cpp  C_SpriteNode.hh  C_TextureHolder.cpp  C_TextureHolder.hh
src/Input/: C_GamePad.cpp  C_GamePad.hh  C_InputHandler.cpp  C_InputHandler.hh
src/Manager/: C_EntityFactory.cpp  C_EntityFactory.hh  C_RessourcesManager.cpp  C_RessourcesManager.hh
src/State/: C_BaseState.cpp  C_BaseState.hh  C_BaseStateMachine.cpp  C_BaseStateMachine.hh  C_GameStateMachine.cpp  C_GameStateMachine.h  C_InGameState.cpp  C_InGameState.h  C_PlayerState.cpp  C_PlayerState.h  C_PlayerStateMachine.cpp  C_PlayerStateMachine.hh  C_TestStateMachine.cpp  C_TestStateMachine.hh
src/Tools/: ForEach.hh  TemplateRessourceHolder.cpp  TemplateRessourceHolder.hh  TemplateRessourceHolder.inl  TemplateSingleton.hh  ToString.h
src/headers/: settings.h
